--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trust-o-meter",
+  "name": "trustometer",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,8 +10,12 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "formik": "^2.1.4",
+    "mongodb-stitch-browser-sdk": "^4.8.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "typescript": "~3.7.2"
   },
