--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^16.9.0",
     "formik": "^2.1.4",
     "mongodb-stitch-browser-sdk": "^4.8.0",
+    "mongodb-stitch-browser-services-aws": "^4.8.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
