--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,10 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
-    "typescript": "~3.7.2"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
+    "typescript": "~3.7.2",
+    "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
