--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,9 +18,11 @@
     "isolatedModules": true,
     "noEmit": true,
     "noImplicitAny": false,
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": [ "./types", "./node_modules/@types"]
   },
   "include": [
     "src"
-  ]
+  ],
+  "exclude": ["node_modules", "types"]
 }
