--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "mongodb-stitch-browser-services-aws": "^4.8.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.3",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
