--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
+    "node-fetch": "^2.6.0",
     "pino": "^6.2.0"
   },
   "devDependencies": {
@@ -45,6 +46,7 @@
     "@types/mongoose": "^5.7.10",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.11.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/pino": "^6.0.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
