--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
     "googleapis": "^48.0.0",
     "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.9",
     "morgan": "^1.10.0",
     "node-fetch": "^2.6.0",
@@ -43,6 +44,7 @@
     "@types/hapi__joi": "^16.0.12",
     "@types/helmet": "0.0.45",
     "@types/jsonwebtoken": "^8.3.9",
+    "@types/lodash": "^4.14.150",
     "@types/mongoose": "^5.7.10",
     "@types/morgan": "^1.9.0",
     "@types/node": "^13.11.1",
