--- a/server/package.json
+++ b/server/package.json
@@ -3,14 +3,8 @@
   "version": "1.0.0",
   "main": "dist/app.js",
   "scripts": {
-    "clean": "rimraf dist/*",
-    "lint": "tslint -c tslint.json -p tsconfig.json --fix",
-    "tsc": "tsc",
-    "build": "npm-run-all clean lint tsc",
-    "dev:start": "npm-run-all build start",
-    "dev": "nodemon --watch src -e ts,ejs --exec npm run dev:start",
-    "start": "node .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/app.ts",
+    "debug": "nodemon --inspect src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -54,6 +48,7 @@
     "npm-run-all": "^4.1.5",
     "pino-pretty": "^4.0.0",
     "rimraf": "^3.0.2",
+    "ts-node": "^8.9.1",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
