--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 
 # production
 /client/build
+/client/src/secret
 
 # misc
 /client/.DS_Store
@@ -33,11 +34,5 @@
 /server/nodemon.json
 /server/1.txt
 /server/Image1.png
-server/src/config/settings.ts
-stitchApp/stitch.json
-stitchApp/auth_providers/anon-user.json
-stitchApp/auth_providers/api-key.json
-stitchApp/auth_providers/local-userpass.json
-stitchApp/services/mongodb-atlas/config.json
-stitchApp/services/mongodb-atlas/rules/trust-o-meter.contacts.json
-stitchApp/services/mongodb-atlas/rules/trust-o-meter.profiles.json
+/server/src/config/settings.ts
+/server/prodEnv.json
