--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,25 +1,61 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "name": "Trust-o-Meter",
+  "short_name": "Trust-o-Meter",
+  "description": "Let's forge friendship together!",
+  "start_url": ".",
+  "scope": ".",
+  "display": "standalone",
+  "background_color": "#9ddcdc",
+  "theme_color": "#9ddcdc",
+  "orientation": "any",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "/icons/icon48.png",
+      "type": "image/png",
+      "sizes": "48x48",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo192.png",
+      "src": "/icons/icon64.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "64x64",
+      "purpose": "any maskable"
     },
     {
-      "src": "logo512.png",
+      "src": "/icons/icon96.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "96x96",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon144.png",
+      "type": "image/png",
+      "sizes": "144x144",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon192.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon256.png",
+      "type": "image/png",
+      "sizes": "256x256",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon384.png",
+      "type": "image/png",
+      "sizes": "384x384",
+      "purpose": "any maskable"
+    },
+    {
+      "src": "/icons/icon512.png",
+      "type": "image/png",
+      "sizes": "512x512",
+      "purpose": "any maskable"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
