--- a/client/package.json
+++ b/client/package.json
@@ -7,17 +7,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
     "firebase": "^7.13.1",
     "formik": "^2.1.4",
-    "mongodb-stitch-browser-sdk": "^4.8.0",
-    "mongodb-stitch-browser-services-aws": "^4.8.0",
     "node-sass": "^4.14.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -30,13 +21,16 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "~3.7.2",
+    "workbox-precaching": "^5.1.3",
     "yup": "^0.28.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && npm run clean-cra-sw && npm run build-sw",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-sw": "node ./src/sw-build.js",
+    "clean-cra-sw": "rimraf build/precache-manifest.*.js build/service-worker.js build/sw-static.js build/asset-manifest.json"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,6 +48,14 @@
     ]
   },
   "devDependencies": {
-    "@types/react-fontawesome": "^1.6.4"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^24.0.0",
+    "@types/react-fontawesome": "^1.6.4",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
+    "workbox-build": "^5.1.3"    
   }
 }
