--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "build-sw": "node ./src/sw-build.js",
-    "clean-cra-sw": "rimraf build/precache-manifest.*.js build/service-worker.js build/sw-static.js build/asset-manifest.json"
+    "clean-cra-sw": "rimraf build/precache-manifest.*.js build/service-worker.js build/sw-static.js build/asset-manifest.json",
+    "static": "serve -s build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -56,6 +57,6 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
-    "workbox-build": "^5.1.3"    
+    "workbox-build": "^5.1.3"
   }
 }
