--- a/server/package.json
+++ b/server/package.json
@@ -12,21 +12,6 @@
   "dependencies": {
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^7.0.1",
-    "bcrypt-nodejs": "0.0.3",
-    "compression": "^1.7.4",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "express-pino-logger": "^4.0.0",
-    "firebase-admin": "^8.10.0",
-    "google-auth-library": "^6.0.0",
-    "googleapis": "^48.0.0",
-    "helmet": "^3.22.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.15",
-    "mongoose": "^5.9.9",
-    "morgan": "^1.10.0",
-    "node-fetch": "^2.6.0",
-    "pino": "^6.2.0",
     "@types/bcrypt-nodejs": "0.0.31",
     "@types/compression": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
@@ -43,16 +28,30 @@
     "@types/node": "^13.11.1",
     "@types/node-fetch": "^2.5.7",
     "@types/pino": "^6.0.0",
+    "@types/web-push": "^3.3.0",
+    "bcrypt-nodejs": "0.0.3",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
+    "firebase-admin": "^8.10.0",
+    "google-auth-library": "^6.0.0",
+    "googleapis": "^48.0.0",
+    "helmet": "^3.22.0",
+    "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.9.9",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.6.0",
     "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
+    "pino": "^6.2.0",
     "pino-pretty": "^4.0.0",
     "rimraf": "^3.0.2",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
-  },
-  "devDependencies": {
-    
+    "typescript": "^3.8.3",
+    "web-push": "^3.4.3"
   },
   "engines": {
     "node": "13.5.0"
