--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typescript": "~3.7.2",
     "workbox-precaching": "^5.1.3",
     "yup": "^0.28.3"
@@ -53,10 +54,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/react-fontawesome": "^1.6.4",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-fontawesome": "^1.6.4",
+    "@types/socket.io-client": "^1.4.32",
     "workbox-build": "^5.1.3"
   }
 }
