--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^13.11.1",
     "@types/node-fetch": "^2.5.7",
     "@types/pino": "^6.0.0",
+    "@types/socket.io": "^2.1.4",
     "@types/web-push": "^3.3.0",
     "bcrypt-nodejs": "0.0.3",
     "compression": "^1.7.4",
@@ -48,6 +49,7 @@
     "pino": "^6.2.0",
     "pino-pretty": "^4.0.0",
     "rimraf": "^3.0.2",
+    "socket.io": "^2.3.0",
     "ts-node": "^8.9.1",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3",
