--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
@@ -58,6 +59,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-fontawesome": "^1.6.4",
+    "@types/react-transition-group": "^4.2.4",
     "@types/socket.io-client": "^1.4.32",
     "workbox-build": "^5.1.3"
   }
