--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,10 @@
     "socket.io-client": "^2.3.0",
     "typescript": "~3.7.2",
     "workbox-precaching": "^5.1.3",
-    "yup": "^0.28.3"
+    "yup": "^0.28.3",
+    
+    "acorn": "^7.1.1",
+    "minimist": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
